--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               <div class="sec5rTop">
 
                 <div class="sec5rTleft flexColumnCenterCenter">
-                  <div class="steelBlueFont fontSize50">
+                  <div class="steelBlueFont fontSize50 bigNumbers">
                     86%
                   </div>
                   <div class="dustyGrayFont">
@@ -255,7 +255,7 @@
                 </div>
 
                 <div class="sec5rTright flexColumnCenterCenter">
-                  <div class="steelBlueFont fontSize50">
+                  <div class="steelBlueFont fontSize50 bigNumbers">
                     94%
                   </div>
                   <div class="dustyGrayFont">
@@ -268,7 +268,7 @@
               <div class="sec5rbottom">
 
                 <div class="sec5rBleft flexColumnCenterCenter">
-                  <div class="steelBlueFont fontSize50">
+                  <div class="steelBlueFont fontSize50 bigNumbers">
                     92%
                   </div>
                   <div class="dustyGrayFont">
@@ -276,7 +276,7 @@
                   </div>
                 </div>
                 <div class="sec5rBright flexColumnCenterCenter">
-                  <div class="steelBlueFont fontSize50">
+                  <div class="steelBlueFont fontSize50 bigNumbers">
                     100%
                   </div>
                   <div class="dustyGrayFont">
